fix: overflow

--- a/assets/styles/about-me_section.scss
+++ b/assets/styles/about-me_section.scss
@@ -1,6 +1,7 @@
 // ABOUT ME SECTION STYLES
 
 .about_blobs {
+    width: 100%;
     position: relative;
 
     #blob-left-corner {
@@ -30,6 +31,8 @@
     top: 150px;
     padding: 2rem;
 
+    
+
     .about_profile-picture {
         width: 15em;
         //box-shadow: 5px 5px 0px $secondary-color, -5px -5px 0px $secondary-color;
@@ -38,10 +41,14 @@
     }
 
     .about_text {
+        padding: 1rem;
         span {
             color: $cta-color;
         }
 
+        p{
+            margin-bottom: 2rem;
+        }
 
     }
 }
