--- a/assets/styles/landing_section.scss
+++ b/assets/styles/landing_section.scss
@@ -10,6 +10,7 @@ header {
     margin-left: 1.5rem;
     margin-right: 1.5rem;
     margin-top: 1rem;
+    margin-bottom: 1rem;
 
 
     .logo {
@@ -32,6 +33,9 @@ header {
             top: -155px;
             left: -140px;
             max-width: 20em;
+
+
+            overflow: hidden;
 
             z-index: -1;
         }
